DEVOPS/kairos02/citas/int/backoffice/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hsp-cites-backoffice
  namespace: p1042
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hsp-cites-backoffice
  template:
    metadata:
      labels:
        app: hsp-cites-backoffice
    spec:
      containers:
        - name: container
          image: docker-p1042.opentrends.net/hsp-cites-backoffice:0.17.1
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health/readiness
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /health/liveness
              port: http
            initialDelaySeconds: 45
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 18
          resources:
            requests:
              cpu: 256m
              memory: 512Mi
            limits:
              cpu: 512m
              memory: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
      restartPolicy: Always
      imagePullSecrets:
        - name: secret-nexus-p1042
