DEVOPS/kairos02/citas/int/backoffice/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hsp-cites-backoffice-route
  namespace: p1042
spec:
  host: hsp-cites-backoffice-route-p1042.apps.lab.okd.local
  to:
    kind: Service
    name: hsp-cites-backoffice-svc
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
